Creating user endpoints and connecting mongoDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+mongodb.database=user-events
+mongodb.connection.string=mongodb+srv://dynaccurate:<password>@cluster0.thckg.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
