Feat: changing the update method to update by id

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-mongodb.database=user-events
-mongodb.connection.string=mongodb+srv://dynaccurate:<password>@cluster0.thckg.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+mongodb.database=user-events-api
+mongodb.connection.string=mongodb+srv://dynaccurate:dynaccurate@cluster0.thckg.mongodb.net/user-events-api?retryWrites=true&w=majority
