fix: passing constants to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
+#MongoDB constants
 mongodb.database=user-events-api
 mongodb.connection.string=mongodb+srv://dynaccurate:dynaccurate@cluster0.thckg.mongodb.net/user-events-api?retryWrites=true&w=majority
+
+#RabbitQM constants
+rabbitmq.queue=rabbit_queue
+rabbitmq.exchange=rabbit_exchange
+rabbitmq.routing_key=rabbit_routingKey
