feat: adding rabbitmq connection info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ mongodb.connection.string=mongodb+srv://dynaccurate:dynaccurate@cluster0.thckg.m
 rabbitmq.queue=rabbit_queue
 rabbitmq.exchange=rabbit_exchange
 rabbitmq.routing_key=rabbit_routingKey
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
