--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #MongoDB constants
-mongodb.database=user-events-api
 mongodb.connection.string=mongodb+srv://dynaccurate:dynaccurate@cluster0.thckg.mongodb.net/user-events-api?retryWrites=true&w=majority
+mongodb.database=user-events-api
 
 #RabbitQM constants
 rabbitmq.queue=rabbit_queue
 rabbitmq.exchange=rabbit_exchange
 rabbitmq.routing_key=rabbit_routingKey
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5671
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
