--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,10 @@ mongodb.connection.string=mongodb+srv://dynaccurate:dynaccurate@cluster0.thckg.m
 mongodb.database=user-events-api
 
 #RabbitQM constants
-rabbitmq.queue=rabbit_queue
-rabbitmq.exchange=rabbit_exchange
-rabbitmq.routing_key=rabbit_routingKey
+rabbitmq.queue=events_queue
+rabbitmq.exchange=events_exchange
+rabbitmq.routing_key=events_routingKey
 
-spring.rabbitmq.host=rabbitmq
-spring.rabbitmq.port=5671
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.uri=amqps://hdgxfktd:H39IeoM4FzcWudcVnys4EBR4x-WPGZq1@beaver.rmq.cloudamqp.com/hdgxfktd
+spring.rabbitmq.username=hdgxfktd
+spring.rabbitmq.password=H39IeoM4FzcWudcVnys4EBR4x-WPGZq1
