Fix: configuring mongodb for container

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #MongoDB constants
-mongodb.connection.string=mongodb+srv://dynaccurate:dynaccurate@cluster0.thckg.mongodb.net/user-events-api?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://dynaccurate:dynaccurate@cluster0.thckg.mongodb.net/user-events-api?retryWrites=true&w=majority
 mongodb.database=user-events-api
 
 #RabbitQM constants
