feat: adding API docs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ rabbitmq.routing_key=events_routingKey
 spring.rabbitmq.uri=amqps://hdgxfktd:H39IeoM4FzcWudcVnys4EBR4x-WPGZq1@beaver.rmq.cloudamqp.com/hdgxfktd
 spring.rabbitmq.username=hdgxfktd
 spring.rabbitmq.password=H39IeoM4FzcWudcVnys4EBR4x-WPGZq1
+
+#Swagger UI
+springdoc.swagger-ui.path=/doc
+springdoc.swagger-ui.operationsSorter=method
