fix: configuring rabbitmq container

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,10 @@ rabbitmq.queue=events_queue
 rabbitmq.exchange=events_exchange
 rabbitmq.routing_key=events_routingKey
 
-spring.rabbitmq.uri=amqps://hdgxfktd:H39IeoM4FzcWudcVnys4EBR4x-WPGZq1@beaver.rmq.cloudamqp.com/hdgxfktd
-spring.rabbitmq.username=hdgxfktd
-spring.rabbitmq.password=H39IeoM4FzcWudcVnys4EBR4x-WPGZq1
+#RabbitQM server config
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 #Swagger UI
 springdoc.swagger-ui.path=/doc
